--- a/vignettes/UserGuide.Rmd
+++ b/vignettes/UserGuide.Rmd
@@ -7,7 +7,12 @@ vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+  %\VignetteDepends{magrittr}
 ---
+
+```{r include = FALSE}
+library(optional)
+```
 
 ## Introduction ##
 
@@ -73,6 +78,8 @@ If `variable` matches a `pattern`, `result-function` is called.
 For comparing optional types, it is a better habit to use `match_with` rather than a conditional statement.
 
 ```{r}
+library(magrittr)
+
 a <- 5
 match_with(a,
   . %>% some(.),          print,
