--- a/inst/doc/UserGuide.Rmd
+++ b/inst/doc/UserGuide.Rmd
@@ -10,6 +10,10 @@ vignette: >
   %\VignetteDepends{magrittr}
 ---
 
+```{r include = FALSE}
+library(optional)
+```
+
 ## Introduction ##
 
 This package adds an `optional` type, similar to `Option` in F#, OCaml and Scala, to `Maybe` in Haskell, and to nullable types in `C#`.
@@ -41,14 +45,14 @@ Note that `some(some(obj))` equals `some(obj)` and that `some(none)` equals `FAL
 
 ### Optionals on functions ###
 
-Given a function `f`, to handle properly `optional` arguments and wraps its return  type into an `optional`, one should use `make_opt`:
+Given a function `f()`, to handle properly `optional` arguments and wraps its return  type into an `optional`, one should use `make_opt()` the following way:
 
 ```
 f_opt <- make_opt(f)
 ```
 
-1. Every `optional` argument passed to `f_opt` will be converted to its original type before being sent to `f`. If one or more of them is `none`, several behaviors are available (see `?make_opt`).
-2. If `f` returns null, or if an error is thrown during its execution, then `f_opt` returns `none`. Else it will return `some(f(...))`.
+1. Every `optional` argument passed to `f_opt()` will be converted to its original type before being sent to `f()`. If one or more of them is `none`, several behaviors are available (see `?make_opt`).
+2. If `f()` returns null, or if an error is thrown during its execution, then `f_opt()` returns `none`. Else it will return `some(f(...))`.
 
 For instance:
 
@@ -71,31 +75,30 @@ pattern , result-function,
 ```
 
 If `variable` matches a `pattern`, `result-function` is called.
-For comparing optional types, it is a better habit to use `match_with` rather than a conditional statement.
+For comparing optional types, it is a better habit to use `match_with()` rather than a conditional statement.
 
 ```{r}
 library(magrittr)
 
 a <- 5
 match_with(a,
-  . %>% some(.),          print,
-  none,                   function() print("Error!")
+  . %>% some(.),          paste,
+  none,                   function() "Error!"
 )
 ```
 
 1. Each `pattern` can be either:
-
-    * an object or a primitive type (direct comparison with `variable`)
-    * a list (match if `variable` is in the list)
+    * an object or a primitive type (direct comparison with `variable`),
+    * a list (match if `variable` is in the list),
     * a `magrittr` functional sequence that matches if it returns `variable`. The dot `.` denotes the variable to be matched.
-
-2. If `result-function` takes no arguments, it will be called as is. Else, the only argument that will be sent is `variable`.
+2. If `result-function` takes no arguments, it will be called as is. Else, the only argument that will be sent is `variable`. You can also use the fallthrough function `fallthrough()` to permit the matching to continue even if the current pattern is matched.
 
 ```{r}
-a <- 5
+a <- 4
 match_with(a,
-  1,                      function() print("Matched exact value"),
-  list(2, 3, 4),          function(x) paste("Matched in list:", x),
-  . %>% if (. > 4).,      function(x) paste("Matched in condition:", x)
+  1,                 function() "Matched exact value",
+  list(2, 3, 4),     fallthrough(function() "Matched in list"),
+  . %>% if (. > 3)., function(x) paste0("Matched in condition: ",x,">3")
 )
 ```
+
